Issue 7060: Fix style/coding issues found by various Maven projects